[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"
thiserror = "2.0.18"
